{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 2276,
  "lineage": "96c16b0a-7161-bcbd-da15-205adfe01112",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776753018600:loadbalancer/balancer",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "balancer-1369901984.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "balancer",
            "idle_timeout": 60,
            "instances": [
              "i-006f72fa4db188833",
              "i-0745be142c805e36f"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "balancer",
            "security_groups": [
              "sg-0b386c165be012a30"
            ],
            "source_security_group": "776753018600/web_security_group",
            "source_security_group_id": "sg-0b386c165be012a30",
            "subnets": [
              "subnet-078b6ecfbd954fa73"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_db_instance.my_database_instance",
            "aws_db_subnet_group.my_database_subnet_group",
            "aws_instance.my_web_instance",
            "aws_key_pair.deployer",
            "aws_security_group.db_security_group",
            "aws_security_group.web_security_group",
            "aws_subnet.myvpc_private_subnet_one",
            "aws_subnet.myvpc_private_subnet_two",
            "aws_subnet.myvpc_public_subnet",
            "aws_vpc.myvpc",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_web_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:776753018600:instance/i-0745be142c805e36f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0745be142c805e36f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e8a8e4071f2f38c6",
            "private_dns": "ip-10-0-1-32.ec2.internal",
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-34-201-144-120.compute-1.amazonaws.com",
            "public_ip": "34.201.144.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d32de4ed4da4ccac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078b6ecfbd954fa73",
            "tags": {
              "Name": "my_web_instance"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "my_web_instance_volume"
            },
            "vpc_security_group_ids": [
              "sg-0b386c165be012a30"
            ]
          },
          "dependencies": [
            "aws_db_instance.my_database_instance",
            "aws_db_subnet_group.my_database_subnet_group",
            "aws_key_pair.deployer",
            "aws_security_group.db_security_group",
            "aws_security_group.web_security_group",
            "aws_subnet.myvpc_private_subnet_one",
            "aws_subnet.myvpc_private_subnet_two",
            "aws_subnet.myvpc_public_subnet",
            "aws_vpc.myvpc",
            "tls_private_key.key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:776753018600:instance/i-006f72fa4db188833",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006f72fa4db188833",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08ccbbabbb7a62f0e",
            "private_dns": "ip-10-0-1-86.ec2.internal",
            "private_ip": "10.0.1.86",
            "public_dns": "ec2-3-91-50-42.compute-1.amazonaws.com",
            "public_ip": "3.91.50.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07f4c3688f5b74b32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078b6ecfbd954fa73",
            "tags": {
              "Name": "my_web_instance"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "my_web_instance_volume"
            },
            "vpc_security_group_ids": [
              "sg-0b386c165be012a30"
            ]
          },
          "dependencies": [
            "aws_db_instance.my_database_instance",
            "aws_db_subnet_group.my_database_subnet_group",
            "aws_key_pair.deployer",
            "aws_security_group.db_security_group",
            "aws_security_group.web_security_group",
            "aws_subnet.myvpc_private_subnet_one",
            "aws_subnet.myvpc_private_subnet_two",
            "aws_subnet.myvpc_public_subnet",
            "aws_vpc.myvpc",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myvpc_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08955801f371dcdb8",
            "owner_id": "776753018600",
            "tags": {
              "Name": "myvpc_internet_gateway"
            },
            "vpc_id": "vpc-07312f8b8821ab631"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myvpc_private_subnet_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02493e5b8c04524e5",
            "owner_id": "776753018600",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myvpc_private_subnet_route_table"
            },
            "vpc_id": "vpc-07312f8b8821ab631"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myvpc_public_subnet_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01d927db42e70a1b6",
            "owner_id": "776753018600",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08955801f371dcdb8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myvpc_public_subnet_route_table"
            },
            "vpc_id": "vpc-07312f8b8821ab631"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc_internet_gateway",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_private_subnet_one_route_table_assosiation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940af1438addc11f",
            "route_table_id": "rtb-02493e5b8c04524e5",
            "subnet_id": "subnet-0209a4bf7a247fa9c"
          },
          "dependencies": [
            "aws_route_table.myvpc_private_subnet_route_table",
            "aws_subnet.myvpc_private_subnet_one",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_private_subnet_two_route_table_assosiation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4f77dde49df6e96",
            "route_table_id": "rtb-02493e5b8c04524e5",
            "subnet_id": "subnet-0801c4c910fd6a6c9"
          },
          "dependencies": [
            "aws_route_table.myvpc_private_subnet_route_table",
            "aws_subnet.myvpc_private_subnet_two",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_public_subnet_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a7b1aac8c050827",
            "route_table_id": "rtb-01d927db42e70a1b6",
            "subnet_id": "subnet-078b6ecfbd954fa73"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc_internet_gateway",
            "aws_route_table.myvpc_public_subnet_route_table",
            "aws_subnet.myvpc_public_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_public_subnet_route_table2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccc12b2877b7cf83",
            "route_table_id": "rtb-01d927db42e70a1b6",
            "subnet_id": "subnet-0b50f3c313c0e9770"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc_internet_gateway",
            "aws_route_table.myvpc_public_subnet_route_table",
            "aws_subnet.myvpc_public_subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_public_subnet_route_table3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0576aa85da9422d",
            "route_table_id": "rtb-01d927db42e70a1b6",
            "subnet_id": "subnet-0beb9bfa07464a27d"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc_internet_gateway",
            "aws_route_table.myvpc_public_subnet_route_table",
            "aws_subnet.myvpc_public_subnet3",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776753018600:security-group/sg-05b90a436befa6b3d",
            "description": "Allow all inbound traffic",
            "egress": [],
            "id": "sg-05b90a436befa6b3d",
            "ingress": [],
            "name": "db_security_group",
            "name_prefix": null,
            "owner_id": "776753018600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myvpc_db_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07312f8b8821ab631"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776753018600:security-group/sg-0b386c165be012a30",
            "description": "Allow all inbound traffic",
            "egress": [],
            "id": "sg-0b386c165be012a30",
            "ingress": [],
            "name": "web_security_group",
            "name_prefix": null,
            "owner_id": "776753018600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myvpc_web_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07312f8b8821ab631"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3846944322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b90a436befa6b3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.db_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3097770828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b90a436befa6b3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.db_security_group",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-439699550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b90a436befa6b3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.db_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4258302676",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b90a436befa6b3d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.db_security_group",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3786046415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b386c165be012a30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-232453104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b386c165be012a30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3379484924",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b386c165be012a30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2129155597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b386c165be012a30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2302170638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b386c165be012a30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1068633019",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b386c165be012a30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-918614971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b386c165be012a30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4241340351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b386c165be012a30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.web_security_group",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_private_subnet_one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776753018600:subnet/subnet-0209a4bf7a247fa9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0209a4bf7a247fa9c",
            "map_public_ip_on_launch": false,
            "owner_id": "776753018600",
            "tags": {
              "Name": "myvpc_private_subnet_one"
            },
            "vpc_id": "vpc-07312f8b8821ab631"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_private_subnet_two",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776753018600:subnet/subnet-0801c4c910fd6a6c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0801c4c910fd6a6c9",
            "map_public_ip_on_launch": false,
            "owner_id": "776753018600",
            "tags": {
              "Name": "myvpc_private_subnet_two"
            },
            "vpc_id": "vpc-07312f8b8821ab631"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776753018600:subnet/subnet-078b6ecfbd954fa73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-078b6ecfbd954fa73",
            "map_public_ip_on_launch": true,
            "owner_id": "776753018600",
            "tags": {
              "Name": "myvpc_public_subnet"
            },
            "vpc_id": "vpc-07312f8b8821ab631"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_public_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776753018600:subnet/subnet-0b50f3c313c0e9770",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b50f3c313c0e9770",
            "map_public_ip_on_launch": true,
            "owner_id": "776753018600",
            "tags": {
              "Name": "myvpc_public_subnet2"
            },
            "vpc_id": "vpc-07312f8b8821ab631"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_public_subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776753018600:subnet/subnet-0beb9bfa07464a27d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0beb9bfa07464a27d",
            "map_public_ip_on_launch": true,
            "owner_id": "776753018600",
            "tags": {
              "Name": "myvpc_public_subnet3"
            },
            "vpc_id": "vpc-07312f8b8821ab631"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776753018600:vpc/vpc-07312f8b8821ab631",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0e1de8097f850e3",
            "default_route_table_id": "rtb-0bb83a415bd26d225",
            "default_security_group_id": "sg-0dc82140e41981a55",
            "dhcp_options_id": "dopt-9151e9eb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07312f8b8821ab631",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb83a415bd26d225",
            "owner_id": "776753018600",
            "tags": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}